--- a/OthelloX/OthelloX/OthelloX.vcxproj
+++ b/OthelloX/OthelloX/OthelloX.vcxproj
@@ -141,6 +141,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
+    <Text Include="todo.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="board.h" />
