Running search in parallel, messy. Some small  bug fixes

--- a/OthelloX/OthelloX/.vscode/settings.json
+++ b/OthelloX/OthelloX/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "files.associations": {
-        "exception": "cpp"
+        "exception": "cpp",
+        "iostream": "cpp",
+        "list": "cpp",
+        "queue": "cpp",
+        "array": "cpp",
+        "*.tcc": "cpp"
     }
 }
